# web7

./: .gitignore  README.md  openapi_letta.json  pyproject.toml
scripts/: run_ngrok.py  run_server.py  test_agent.py  test_client.py
web7/: __init__.py  api.py  models.py
web7/action/: agent.py  entrypoint.py  interface_search.py  search_server.py  state.py  test.py  verify.py
web7/frontend/: package-lock.json  package.json
web7/frontend/app/: constants.tsx  page.tsx  particles.tsx  spotlight.tsx
web7/frontend/app/hooks/: useAgentData.ts
web7/frontend/app/markov-chain/: page.tsx
web7/frontend/components/: StreamingDetails.tsx  planlist.tsx
web7/frontend/components/MarkovChain/: AnimatedEdge.tsx  AnimatedNode.tsx  MarkovChainFlow.tsx  index.ts  types.ts  useMarkovChain.ts  utils.ts
web7/frontend/components/ui/: button.tsx  card.tsx  dialog.tsx
web7/frontend/mock-server/: main.py
web7/llm/: groq.py
web7/search/: test-mcp-server.py  vector_service.py
web7/search/database_server/: api.py  models.py
web7/search/qdrant-vector-searc/: composio-servers.csv  qdrant-client.py
web7/search/qdrant_vector_search/: composio-servers.py  composio-servers.txt  qdrant_client.py
