[project]
name = "web7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "fastembed<0.6.9",
    "qdrant-client<1.14.3",
    "e2b-code-interpreter>=1.5.1",
    "e2b>=1.5.2",
    "letta>=0.8.5",
    "orjson>=3.10.18",
    "dotenv>=0.9.9",
]
